--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@vercel/postgres": "^0.9.0",
         "express": "4.19.2",
         "mongoose": "^8.5.3",
         "socket.io": "^4.7.5"
