--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@vercel/postgres": "^0.9.0",
         "express": "4.19.2",
         "mongoose": "^8.5.3",
-        "socket.io": "^4.7.5"
+        "socket.io": "^4.7.5",
+        "sqlite3": "^5.1.7"
     }
 }
